add to basket button add prod functionality

--- a/ecommerce-store/templates/store/home.html
+++ b/ecommerce-store/templates/store/home.html
@@ -1,4 +1,4 @@
-{% extends './base.html' %} {% load static %} {% block title %}Home{% endblock%}
+{% extends './base.html' %} {% load static %} {% block title %}BookStore{% endblock%}
 <main>
   {% block content %}
   <section class="py-5 text-center container">
