--- a/ecommerce-store/templates/store/products/single.html
+++ b/ecommerce-store/templates/store/products/single.html
@@ -1,4 +1,5 @@
-{% extends "../base.html" %} {% block content %}
+{% extends "store/base.html" %} {% load static %} {% block title %}
+{{product.name }}{% endblock %} {% block content %}
 <div class="container">
   <main class="pt-5">
     <div class="row g-3">
@@ -35,7 +36,12 @@
                 </select>
               </div>
               <div class="col-6 text-end">
-                <button type="button" class="btn btn-secondary btn-sm">
+                <button
+                  type="button"
+                  class="btn btn-secondary btn-sm"
+                  id="add-button"
+                  value="{{product.id}}"
+                >
                   Add to basket
                 </button>
               </div>
@@ -46,4 +52,21 @@
     </div>
   </main>
 </div>
+
+<script>
+  $(document).on("click", "#add-button", function (e) {
+    e.preventDefault();
+    $.ajax({
+      type: "POST",
+      url: '{% url "basket:basket_add" %}',
+      data: {
+        productid: $("#add-button").val(),
+        csrfmiddlewaretoken: "{{ csrf_token }}",
+        action: "post",
+      },
+      success: function (json) {},
+      error: function (xhr, errmsg, err) {},
+    });
+  });
+</script>
 {% endblock %}
