calculate qty of products in basket

--- a/ecommerce-store/templates/store/products/single.html
+++ b/ecommerce-store/templates/store/products/single.html
@@ -1,5 +1,9 @@
-{% extends "store/base.html" %} {% load static %} {% block title %}
-{{product.name }}{% endblock %} {% block content %}
+{% extends "store/base.html" %} 
+{% load static %} 
+{% block title %}
+{{product.name }}
+{% endblock %} 
+{% block content %}
 <div class="container">
   <main class="pt-5">
     <div class="row g-3">
@@ -61,10 +65,14 @@
       url: '{% url "basket:basket_add" %}',
       data: {
         productid: $("#add-button").val(),
+        productqty: $("#select option:selected").text(),
         csrfmiddlewaretoken: "{{ csrf_token }}",
         action: "post",
       },
-      success: function (json) {},
+      success: function (json) {
+        document.getElementById("basket-qty").innerHTML = json.qty
+
+      },
       error: function (xhr, errmsg, err) {},
     });
   });
