--- a/ecommerce-store/templates/store/base.html
+++ b/ecommerce-store/templates/store/base.html
@@ -50,7 +50,16 @@
               </ul>
             </li>
           </ul>
-          <a type="button" role="button" href="{% url "basket:basket_summary" %}" class="btn btn-outline-secondary">1
+          <a type="button" role="button" href="{% url "basket:basket_summary" %}" class="btn btn-outline-secondary">
+            {% with total_qty=basket|length %}
+            <div id="basket-qty" class="d-inline-flex">
+              {% if total_qty > 0 %}
+              {{total_qty}}
+              {% else %}
+              0
+              {% endif %}
+            </div>
+            {% endwith %}
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3"
               viewBox="0 0 16 16">
               <path
