--- a/ecommerce-store/templates/store/products/category.html
+++ b/ecommerce-store/templates/store/products/category.html
@@ -1,8 +1,9 @@
-{% extends "../base.html" %} {% load static %} {% block title %} {% if category
-%}{{ category.name }}{% else %}Products{% endif %} {% endblock %} {% block
-content %}
+{% extends "../base.html" %} {% load static %} {% block title %} {% if category%}
+{{ category.name }}
+{% else %}Products{% endif %} 
+{% endblock %} 
+{% block content %}
 <main>
-  {% block content %}
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
