--- a/ecommerce-store/templates/basket/summary.html
+++ b/ecommerce-store/templates/basket/summary.html
@@ -68,7 +68,7 @@ Summary{%endblock %} {% block content %}
       </div>
       <div class="col-md-5 col-lg-4 order-md-last p-0 order-3">
         <div class="d-grid gap-2">
-          <a role="button" href="" class="btn btn-success fw-bold" type="button"
+          <a role="button" href="{% url "payment:basket" %}" class="btn btn-success fw-bold" type="button"
             >Checkout</a
           >
           <button class="btn btn-light" type="button">Save for later</button>
