--- a/ecommerce-store/static/core/css/base.css
+++ b/ecommerce-store/static/core/css/base.css
@@ -1,56 +1,46 @@
 /* Bootstrap Over-ride */
-@media (min-width: 1000px) {
-    .container {
+@media (min-width: 1000px){
+    .container{
         max-width: 1000px;
     }
 }
-
-@media (max-width: 1200px) {
-    .container {
+@media (max-width: 1200px){
+    .container{
         max-width: 100%;
-        padding: 0 24px;
+        padding:0 24px;
     }
 }
-
 .dropdown-toggle::after {
     display: none;
 }
-
-.dropdown-menu {
-    top: 58px;
-    left: 0px;
-    padding: 10px;
+.dropdown-menu{
+    top:58px;
+    left:0px;
+    padding:10px;
 }
 
-.alert-primary {
+.alert-primary{
     background-color: #E4F1FF;
 }
 
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
-html,
-body,
-p,
-div {
+html, body, p, div{
     letter-spacing: -0.02px;
     font-family: 'Roboto', sans-serif;
 }
-
-.fs12 {
+.fs12{
     font-size: 12px;
 }
-
-.fs15 {
+.fs15{
     font-size: 0.9375rem;
 }
 
-.fw300 {
+.fw300{
     font-weight: 300;
 }
-
-.fw500 {
+.fw500{
     font-weight: 500;
 }
 
@@ -62,21 +52,18 @@ div {
     width: 49px;
     height: auto;
 }
-
 /* sm */
 @media (min-width: 768px) {
     .logo {
         width: 49px;
     }
 }
-
 /* md */
 @media (min-width: 992px) {
     .logo {
         width: 60px;
     }
 }
-
 /* lg */
 @media (min-width: 1200px) {
     .logo {
@@ -84,8 +71,40 @@ div {
     }
 }
 
+/* Basket Menu */
+
+.basket-qty{
+    color: #fff;
+    background: #d42114;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 11px;
+    height: 15px;
+    width: 14px;
+    position: absolute;
+    box-sizing: content-box;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 1px;
+    right: 10px;
+}
+
+.basket-btn{
+    position: relative;
+}
+
+.basket-btn:hover, .basket-btn:focus, .basket-btn:active, .basket-btn.active{
+    color:#d42114;
+    transition-duration: 0.4s;
+    background-color: #fff;
+}
+
+
 /* Footer */
 
-.footer>div>div>ul>li {
-    padding-bottom: 8px;
+.footer > div > div > ul > li{
+    padding-bottom:8px;
 }
